--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>واژه‌نامه تخصصی شرکت</title>
+    <title>واژه‌نامه تخصصی شرکت هستی آرین تامین</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -186,7 +186,7 @@
         </main>
         
         <footer>
-            <p>طراحی و توسعه برای بهبود ارتباطات داخلی</p>
+            <p>طراحی و توسعه برای بهبود ارتباطات داخلی توسط واحد مارکتینگ</p>
         </footer>
     </div>
 
