--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <div class="container">
         <header>
             <img src="logo.png" alt="لوگو شرکت" class="logo">
-            <h1>واژه‌نامه تخصصی شرکت</h1>
+            <h1>واژه‌نامه تخصصی شرکت هستی آرین تامین</h1>
         </header>
 
         <main>
